--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@1984vc/notion_mdx",
   "version": "1.0.0",
   "description": "CLI tool to export Notion database pages to MDX files with frontmatter",
+  "homepage": "https://github.com/1984vc/notion_mdx",
   "main": "dist/index.js",
   "bin": {
     "notion_mdx": "./dist/index.js"
