rename to notion-tools

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@1984vc/notion-export",
-  "version": "2.0.0",
+  "name": "@1984vc/notion-tools",
+  "version": "3.0.0",
   "description": "CLI tool to export Notion database pages to various formats",
-  "homepage": "https://github.com/1984vc/notion-export",
+  "homepage": "https://github.com/1984vc/notion-tools",
   "main": "dist/index.js",
   "bin": {
-    "notion-export": "./dist/index.js"
+    "notion-tools": "./dist/index.js"
   },
   "type": "module",
   "scripts": {
