--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@1984vc/notion-tools",
-  "version": "3.3.1",
+  "version": "4.0.0",
   "description": "CLI tool to export Notion database pages to various formats",
   "homepage": "https://github.com/1984vc/notion-tools",
   "main": "dist/index.js",
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
